--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -36,3 +36,21 @@ $font-weight: (
 @mixin transition {
     transition: all 0.3s ease-in-out;
 }
+
+@mixin mediaQuery-lg {
+    @media (max-width: 1200px) {
+        @content;
+    }
+}
+
+@mixin mediaQuery-md {
+    @media (max-width: 1000px) {
+        @content;
+    }
+}
+
+@mixin mediaQuery-sm {
+    @media (max-width: 768px) {
+        @content;
+    }
+}
