--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -9,8 +9,13 @@
         &__hero {
             grid-column: 1 / 3;
 
-            .hero__img > img {
-                width: 100%;
+            .hero__img {
+                &-mobile {
+                    display: none;
+                }
+                & > img {
+                    width: 100%;
+                }
             }
 
             .hero__text {
@@ -135,6 +140,7 @@
 
                 p {
                     color: $dark-grayish-blue;
+                    line-height: 2rem;
                 }
             }
         }
