--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -43,6 +43,7 @@
         }
 
         .side-bar {
+            display: block;
             position: fixed;
             top: 0;
             right: 0;
